// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem should render the component as HTMLAnchorElement with active state 1`] = `
<DocumentFragment>
  <mock-styled.a
    aria-current="true"
    href="#"
  >
    <mock-styled.span>
      Label
    </mock-styled.span>
  </mock-styled.a>
</DocumentFragment>
`;

exports[`NavItem should render the component as HTMLAnchorElement with default state 1`] = `
<DocumentFragment>
  <mock-styled.a
    href="#"
  >
    <mock-styled.span>
      Label
    </mock-styled.span>
  </mock-styled.a>
</DocumentFragment>
`;

exports[`NavItem should render the component as HTMLButtonElement with active state 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-current="true"
  >
    <mock-styled.span>
      Label
    </mock-styled.span>
  </mock-styled.button>
</DocumentFragment>
`;

exports[`NavItem should render the component as HTMLButtonElement with default state 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-current="true"
  >
    <mock-styled.span>
      Label
    </mock-styled.span>
  </mock-styled.button>
</DocumentFragment>
`;
